# ApexPowers

./: .gitignore  .npmignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  SECURITY.md  apex.cmd  apex.ps1  gitleaks.toml  package.json  pyproject.toml
.agents/: Agents.md  code-reviewer.md  developer.md  implementer.md  perf-optimizer.md  planner.md  researcher.md
.claude-plugin/: plugin.json
.claude/agents/: code-reviewer.md  developer.md  implementer.md  perf-optimizer.md  planner.md  researcher.md
.claude/skills/apex-session-init-claude-code/: SKILL.md
.codex-plugin/: plugin.json
.codex-plugin/profiles/core/skills/apex-doctor/: SKILL.md
.codex-plugin/profiles/core/skills/apex-init-project-agent/: SKILL.md
.codex-plugin/profiles/core/skills/apex-init-project-code/: SKILL.md
.codex-plugin/profiles/core/skills/apex-init-project-file/: SKILL.md
.codex-plugin/profiles/core/skills/apex-session-init-codex/: SKILL.md
.codex-plugin/profiles/core/skills/apex-sync-agent-mirrors/: SKILL.md
.codex/agents/: code-reviewer.toml  developer.toml  implementer.toml  perf-optimizer.toml  planner.toml  researcher.toml
.codex/skills/accessibility/: SKILL.md
.codex/skills/apex-doctor/: SKILL.md
.codex/skills/apex-doctor/agents/: openai.yaml
.codex/skills/apex-doctor/scripts/: apex_doctor.py
.codex/skills/apex-grill-with-docs/: SKILL.md
.codex/skills/apex-init-project-agent/: SKILL.md
.codex/skills/apex-init-project-agent/agents/: openai.yaml
.codex/skills/apex-init-project-agent/scripts/: init_project_agent.py
.codex/skills/apex-init-project-code/: SKILL.md
.codex/skills/apex-init-project-code/agents/: openai.yaml
.codex/skills/apex-init-project-code/scripts/: init_code_headers.py
.codex/skills/apex-init-project-file/: SKILL.md
.codex/skills/apex-init-project-file/agents/: openai.yaml
.codex/skills/apex-init-project-file/scripts/: init_agents_md.py
.codex/skills/apex-init-project-hooks/: SKILL.md
.codex/skills/apex-init-project-hooks/agents/: openai.yaml
.codex/skills/apex-init-project-hooks/scripts/: apex_loop.py  apex_loop_core.py  apex_loop_routes.py  apex_loop_runtime.py  apex_loop_utils.py  init_project_hooks.py
.codex/skills/apex-init-project-hooks/templates/: claude-settings.json  codex-hooks.json
.codex/skills/apex-lean-review/: SKILL.md
.codex/skills/apex-session-init-codex/: SKILL.md
.codex/skills/apex-session-init-codex/agents/: openai.yaml
.codex/skills/apex-sync-agent-mirrors/: SKILL.md
.codex/skills/apex-sync-agent-mirrors/agents/: openai.yaml
.codex/skills/apex-sync-agent-mirrors/scripts/: sync_agent_mirrors.py
.codex/skills/apex-to-issues/: SKILL.md
.codex/skills/apex-to-prd/: SKILL.md
.codex/skills/best-practices/: SKILL.md
.codex/skills/core-web-vitals/: SKILL.md
.codex/skills/core-web-vitals/references/: LCP.md
.codex/skills/github-solution-research/: .gitignore  LICENSE  README.md  SKILL.md
.codex/skills/github-solution-research/agents/: openai.yaml
.codex/skills/github-solution-research/references/: extraction-playbook.md  research-rubric.md
.codex/skills/gsap-core/: SKILL.md
.codex/skills/gsap-performance/: SKILL.md
.codex/skills/gsap-plugins/: SKILL.md
.codex/skills/gsap-react/: SKILL.md
.codex/skills/gsap-scrolltrigger/: SKILL.md
.codex/skills/performance/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: quality.yml  release.yml
benchmarks/: README.md  apex_distribution_benchmark.py
commands/: apex-doctor.toml  apex-init-project-hooks.toml  apex-lean-review.toml  apex-orchestrate-delivery.toml  apex-sync-agent-mirrors.toml
docs/: apex-agent-portability.md  apex-loop-hook-routes.md  apex-parallel-delivery-orchestration.md  apexpowers-install-distribution-roadmap.md  apexpowers-inventory.md  apexpowers-shortcomings-assessment.md  apexpowers-skills-agents-hooks.md  ecc-hook-comparison-plan.md  open-source-release-playbook.md  platform-native-solutions.md  subagent-hooks-contract-evidence.md  supply-chain-manifest.sha256  supply-chain-trust-security.md  trellis-inspired-apex-improvement-plan.md  user-guide.md
registry/: apexpowers-profiles.json
scripts/: check_apex_distribution.py
src/apexpowers_cli/: __init__.py  __main__.py  cli.py
src/apexpowers_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tasks/: research+trellis-apexpowers-opportunities.md  todo+apex-completion-contract-gate.md  todo+apex-loop-hooks.md  todo+apex-ponytail-production.md  todo+apex-task-contract-workflow.md
tasks/loops/: .apex-manifest.json  session-snapshot.json  workflow.md
tasks/loops/apex-loop-hooks/: state.json
tasks/loops/apex-ponytail-production/: state.json
tasks/reviews/: apex-completion-contract-gate.md  apex-init-project-code.md  apex-loop-hooks.md  apex-ponytail-production.md  apex-task-contract-workflow.md  open-source-readiness.md  readme-refresh.md
tests/: __init__.py  test_apex_cli.py  test_apex_distribution.py  test_apex_doctor.py  test_apex_loop_hooks.py  test_apex_loop_installer.py  test_init_agents_md.py  test_init_code_headers.py  test_init_project_agent.py
tests/apex_hooks/: test_post_tool_use_semantics.py  test_pre_tool_use_security.py  test_stop_loop_safety.py
tests/apex_hooks/fixtures/: claude_pre_edit_secret.json  claude_pre_grep_env.json  claude_pre_multiedit_secret.json  claude_pre_read_env.json  claude_pre_write_secret.json  codex_pre_apply_patch_secret.json  codex_pre_bash_heredoc_secret.json  stop_same_reason_active.json
